# active_grasp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bt_sim_node.py  controller.py  controllers.py  model.py  package.xml  policies.py  requirements.txt  robot_sim.py  run.py  run_demo.py  setup.py  sim.py  sim_grasp.py  simulation.py  utils.py
active_grasp/: __init__.py  baselines.py  bbox.py  controller.py  nbv.py  policies.py  policy.py  simulation.py  timer.py  utils.py  visualization.py
cfg/: active_grasp.rviz  active_grasp.yaml  scene1.yaml  scene4.yaml  test.yaml
cfg/hw/: T_base_tag.txt  apriltag.yaml  scene01.yaml  scene02.yaml  scene03.yaml  scene04.yaml
cfg/scenes/: bowl.yaml  kitchen.yaml  kitchen2.yaml  mustard.yaml  mustard1.yaml  mustard2.yaml  scene1.yaml  scene2.yaml  scene3.yaml  test.yaml  test1.yaml  test2.yaml  test3.yaml  test4.yaml
cfg/sim/: mustard.yaml
config/: active_grasp.yaml
launch/: active_grasp.launch  active_grasp.rviz  active_grasp.yaml  apriltag.launch  env.launch  hw.launch  panda.launch  panda_visualization.launch  panda_visualization.rviz  simulation.launch
msg/: AABBox.msg
nodes/: simulation.py
notebooks/: print_metrics.py
scripts/: bt_sim_node.py  calibrate_roi.py  hw_node.py  print_stats.ipynb  reset.py  run.py  run.sh
src/active_grasp/: __init__.py  baselines.py  controller.py  nbv.py  policy.py  rviz.py  simulation.py  timer.py  visualization.py
srv/: Reset.srv  Seed.srv
test/: test_clustering.py  test_sim_scene.py
