<?xml version="1.0"?>
<package format="2">
    <name>active_grasp</name>
    <version>0.1.0</version>
    <description>TODO</description>
    <maintainer email="mbreyer@ethz.ch">Michel Breyer</maintainer>
    <license>TODO</license>
    <url></url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

    <depend>geometry_msgs</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
</package>
